--- a/regression_block.ipynb
+++ b/regression_block.ipynb
@@ -39,8 +39,21 @@
    "execution_count": null,
    "id": "b161c9f3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2+3"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -330,8 +343,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python (ml_regression_block)",
+   "language": "python",
+   "name": "ml_regression_block"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
